example module