@@ -4,7 +4,6 @@ import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
@@ -26,19 +25,20 @@ public class TimelineFactory {
                 .getEvents()
                 .stream()
                 .sorted(Collections.reverseOrder(Comparator.comparingLong((StartupTimeline.TimelineEvent o) -> o.getDuration().toMillis())))
-                .toList();
+                .collect(Collectors.toList());
 
-        var map = events.stream()
-                .collect(Collectors.groupingBy(timelineEvent -> Optional.ofNullable(timelineEvent.getStartupStep().getParentId()).orElse(-1L), Collectors.mapping(timelineEvent -> timelineEvent, Collectors.toList())));
+//        var map = events.stream()
+//                .collect(Collectors.groupingBy(timelineEvent -> Optional.ofNullable(timelineEvent.getStartupStep().getParentId()).orElse(-1L), Collectors.mapping(timelineEvent -> timelineEvent, Collectors.toList())));
 
         return events.stream()
-                .map(it -> new Event(it, findChildren(it.getStartupStep().getId(), map), map))
+                .map(it -> new Event(it, findChildren(it.getStartupStep().getId(), events), events))
+//                .filter(it -> it.parentId == null || it.children.size() > 0)
                 .sorted(Collections.reverseOrder(Comparator.comparingLong((Event o) -> o.value)))
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    private static List<StartupTimeline.TimelineEvent> findChildren(Long parentId, Map<Long, List<StartupTimeline.TimelineEvent>> allEvents) {
-        return allEvents.get(parentId);
+    private static List<StartupTimeline.TimelineEvent> findChildren(Long parentId, List<StartupTimeline.TimelineEvent> allEvents) {
+        return allEvents.stream().filter(it -> parentId.equals(it.getStartupStep().getParentId())).collect(Collectors.toList());
     }
 
     class Event {
@@ -49,16 +49,19 @@ public class TimelineFactory {
         private final Long parentId;
         private final String label;
         private final long value;
+        private final long actualDuration;
         private final Map<String, String> tags;
 
         public Event(StartupTimeline.TimelineEvent timelineEvent, List<StartupTimeline.TimelineEvent> children,
-                Map<Long, List<StartupTimeline.TimelineEvent>> allEvents) {
+                List<StartupTimeline.TimelineEvent> allEvents) {
             this.id = timelineEvent.getStartupStep().getId();
             this.parentId = timelineEvent.getStartupStep().getParentId();
             this.timelineEvent = timelineEvent;
-            this.children = children == null ? Collections.emptyList() : children.stream().map(c -> new Event(c, findChildren(c.getStartupStep().getId(), allEvents), allEvents)).toList();
+            this.children = children == null ? Collections.emptyList() : children.stream().map(c -> new Event(c, findChildren(c.getStartupStep().getId(), allEvents), allEvents)).collect(
+                    Collectors.toList());
             this.label = timelineEvent.getStartupStep().getName();
             this.value = timelineEvent.getDuration().toMillis();
+            this.actualDuration = timelineEvent.getDuration().toMillis() - this.children.stream().map(Event::getValue).reduce(0L, Long::sum);
             this.tags = resolver.resolveTags(timelineEvent);
         }
 
@@ -89,6 +92,10 @@ public class TimelineFactory {
 
         public Map<String, String> getTags() {
             return tags;
+        }
+
+        public long getActualDuration() {
+            return actualDuration;
         }
     }
 }
